--- a/Arrival/ArrivaltoEarth.html
+++ b/Arrival/ArrivaltoEarth.html
@@ -18,7 +18,7 @@
     </div>
     
     <div id="principal">
-        <img   src="https://i.ytimg.com/vi/FZC5mp7Khcc/maxresdefault.jpg" alt="Optimus Prime" >
+        <img   src="https://i.ytimg.com/vi/p3q_BJ_bagQ/maxresdefault.jpg" alt="Optimus Prime" >
             <h1 class="texto">ARRIVAL TO EARTH</h1>
                 <p class="text4">The best song in the Transformers saga</p>
             </div>
@@ -136,8 +136,8 @@
                 img {
                    width: 100%;
                    height: 100%;
-                   filter: grayscale(100%);
-                   opacity: 80%;
+                   filter: none;
+                   opacity: 100%;
                    object-fit:cover;     
                 }
                 img.a {
@@ -211,7 +211,7 @@
                   position: absolute;
                   opacity: 100%;
                   text-align: center;
-                  background-color: transparent;        
+                  background-color: black;        
                   color: #ffffff;
                   font-family: verdana;
                   font-size: 50px;
